# nexus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
nexus-client/: Cargo.toml
nexus-client/assets/linux/: nexus.desktop
nexus-client/assets/linux/arch/: PKGBUILD  PKGBUILD-git  README.md
nexus-client/assets/macos/: README.md  generate_assets.sh  nexus.icns
nexus-client/assets/windows/: README.md  license.rtf
nexus-client/fonts/: icons.toml
nexus-client/locales/de/: ui.ftl
nexus-client/locales/en/: ui.ftl
nexus-client/locales/es/: ui.ftl
nexus-client/locales/fr/: ui.ftl
nexus-client/locales/it/: ui.ftl
nexus-client/locales/ja/: ui.ftl
nexus-client/locales/ko/: ui.ftl
nexus-client/locales/nl/: ui.ftl
nexus-client/locales/pt-BR/: ui.ftl
nexus-client/locales/pt-PT/: ui.ftl
nexus-client/locales/ru/: ui.ftl
nexus-client/locales/zh-CN/: ui.ftl
nexus-client/locales/zh-TW/: ui.ftl
nexus-client/src/: autostart.rs  avatar.rs  constants.rs  events.rs  icon.rs  macos_url.rs  main.rs  sound.rs  uri.rs
nexus-client/src/commands/: away.rs  back.rs  ban.rs  bans.rs  broadcast.rs  channels.rs  clear.rs  duration.rs  focus.rs  help.rs  join.rs  leave.rs  list.rs  me.rs  message.rs  mod.rs  ping.rs  reindex.rs  secret.rs  server_info.rs  status.rs  topic.rs  trust.rs  trusted.rs  unban.rs  untrust.rs  user_info.rs  user_kick.rs  window.rs
nexus-client/src/config/: audio.rs  bookmarks.rs  events.rs  mod.rs  persistence.rs  settings.rs  theme.rs
nexus-client/src/handlers/: bookmarks.rs  broadcast.rs  connection.rs  connection_monitor.rs  files.rs  fingerprint.rs  keyboard.rs  mod.rs  news.rs  server_info.rs  settings.rs  transfers.rs  tray.rs  ui.rs  uri.rs  user_management.rs  voice.rs
nexus-client/src/handlers/files/: directories.rs  mod.rs  navigation.rs  operations.rs  search.rs  tabs.rs  (+1 more)
nexus-client/src/history/: crypto.rs  mod.rs  storage.rs
nexus-client/src/i18n/: bundle.rs  mod.rs  translate.rs
nexus-client/src/network/: connect.rs  constants.rs  mod.rs  stream.rs  tls.rs  types.rs
nexus-client/src/notifications/: linux.rs  mod.rs  windows.rs
nexus-client/src/style/: chat.rs  fonts.rs  layout.rs  mod.rs  widgets.rs  window.rs
nexus-client/src/transfers/: executor.rs  mod.rs  persistence.rs  subscription.rs  types.rs
nexus-client/src/tray/: linux.rs  mod.rs  windows.rs
nexus-client/src/types/: bookmark.rs  channel.rs  connection.rs  display.rs  form.rs  message.rs  mod.rs  pending.rs  ui.rs  view_config.rs  voice.rs
nexus-client/src/views/: about.rs  bookmark.rs  broadcast.rs  chat.rs  connection.rs  connection_monitor.rs  constants.rs  disconnect_dialog.rs  files.rs  fingerprint.rs  layout.rs  mod.rs  news.rs  server_info.rs  server_list.rs  settings.rs  transfers.rs  user_info.rs  user_list.rs  users.rs  voice.rs
nexus-client/src/voice/: audio.rs  codec.rs  dtls.rs  jitter.rs  manager.rs  mic_test.rs  mod.rs  processor.rs  ptt.rs  resample.rs  subscription.rs
nexus-client/src/widgets/: context_menu.rs  menu_button.rs  mod.rs
nexus-common/: Cargo.toml
nexus-common/src/: error_kind.rs  hash.rs  io.rs  lib.rs  protocol.rs  time.rs  voice.rs
nexus-common/src/framing/: error.rs  limits.rs  message_id.rs  mod.rs  reader.rs  writer.rs
nexus-common/src/validators/: ban_reason.rs  channel.rs  channel_list.rs  chat_topic.rs  dir_name.rs  duration.rs  error.rs  features.rs  file_path.rs  ip_rule_reason.rs  locale.rs  message.rs  mod.rs  news_body.rs  news_image.rs  nickname.rs  password.rs  permissions.rs  search_query.rs  server_description.rs  server_name.rs  sha256.rs  status.rs  target.rs  token.rs  trust_reason.rs  username.rs  version.rs
nexus-server/: Cargo.toml
nexus-server/locales/de/: errors.ftl
nexus-server/locales/en/: errors.ftl
nexus-server/locales/es/: errors.ftl
nexus-server/locales/fr/: errors.ftl
nexus-server/locales/it/: errors.ftl
nexus-server/locales/ja/: errors.ftl
nexus-server/locales/ko/: errors.ftl
nexus-server/locales/nl/: errors.ftl
nexus-server/locales/pt-BR/: errors.ftl
nexus-server/locales/pt-PT/: errors.ftl
nexus-server/locales/ru/: errors.ftl
nexus-server/locales/zh-CN/: errors.ftl
nexus-server/locales/zh-TW/: errors.ftl
nexus-server/migrations/: 20251216225138_create_news.sql  20251219031300_add_is_shared.sql  20251220230500_add_guest_account.sql  20260102002400_add_max_transfers_per_ip.sql  20260109013500_create_ip_bans.sql  20260109214800_add_file_reindex_interval.sql  20260110230700_create_ip_trusted.sql  20260111025300_add_persistent_channels.sql  20260111030000_migrate_topic_to_channel.sql  20260111035000_add_auto_join_channels.sql
nexus-server/src/: args.rs  ban_cache.rs  connection.rs  connection_tracker.rs  constants.rs  i18n.rs  ip_rule_cache.rs  lib.rs  main.rs  transfer.rs  upnp.rs  websocket.rs
nexus-server/src/channels/: manager.rs  mod.rs  types.rs
nexus-server/src/db/: bans.rs  channels.rs  chat.rs  config.rs  mod.rs  news.rs  password.rs  permissions.rs  sql.rs  trusts.rs  users.rs
nexus-server/src/files/: area.rs  folder_type.rs  index.rs  mod.rs  operations.rs  path.rs
nexus-server/src/handlers/: ban_create.rs  ban_delete.rs  ban_list.rs  broadcast.rs  chat.rs  chat_join.rs  chat_leave.rs  chat_list.rs  chat_secret.rs  chat_topic_update.rs  connection_monitor.rs  duration.rs  errors.rs  file_copy.rs  file_create_dir.rs  file_delete.rs  file_info.rs  file_list.rs  file_move.rs  file_reindex.rs  file_rename.rs  file_search.rs  handshake.rs  login.rs  mod.rs  news_create.rs  news_delete.rs  news_edit.rs  news_list.rs  news_show.rs  news_update.rs  server_info_update.rs  testing.rs  trust_create.rs  trust_delete.rs  trust_list.rs  user_away.rs  user_back.rs  user_create.rs  user_delete.rs  (+9 more)
nexus-server/src/transfers/: auth.rs  download.rs  hash.rs  helpers.rs  mod.rs  registry.rs  transfer.rs  types.rs  upload.rs
nexus-server/src/users/: user.rs
nexus-server/src/voice/: mod.rs  registry.rs  session.rs  udp.rs
nexus-server/tests/: multi_session.rs  transfer.rs
nexus-server/tests/common/: mod.rs
(+106 files in other folders)
