[package]
name = "nexus-client"
version = "0.5.28"
edition = "2024"
license = "MIT"
authors = ["Josh Ellithorpe <quest@mac.com>"]
description = "Cross-platform BBS client"

[package.metadata.bundle]
name = "Nexus BBS"
identifier = "at.greyh.nexus"
icon = ["assets/macos/nexus.png", "assets/windows/nexus.ico"]
category = "public.app-category.social-networking"

short_description = "Cross-platform BBS client"
long_description = """
Nexus is a modern BBS (Bulletin Board System) client supporting chat,
file transfers, news, and user management. Features include mandatory TLS
encryption, 30 themes, 13 language translations, and cross-platform support.
"""
copyright = "Copyright (c) 2026 Nexus BBS Project"

# Linux-specific settings
linux_exec_args = "%u"
linux_mime_types = ["x-scheme-handler/nexus"]

# macOS-specific settings
osx_url_schemes = ["nexus"]

# Windows-specific settings
windows_url_schemes = ["nexus"]

# Debian package dependencies (runtime libraries)
deb_depends = ["libasound2"]

[dependencies]
nexus-common = { path = "../nexus-common" }
iced = { version = "0.14", features = ["advanced", "image", "lazy", "markdown", "svg", "tokio"] }
iced_aw = { version = "0.13", features = ["context_menu", "number_input", "tabs"] }
iced_toasts = { git = "https://github.com/zquestz/iced-toasts" }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
chrono = "0.4"
dirs = "6.0"
tokio-rustls = "0.26"
tokio-socks = "0.5"
rustls-native-certs = "0.8"
webpki-roots = "1.0"
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
sys-locale = "0.3"
fluent-bundle = "0.16"
unic-langid = "0.9"
open = "5"
linkify = { git = "https://github.com/zquestz/linkify" }
rfd = "0.17"
base64 = "0.22"
identicon-rs = "7.0"
image = "0.25"
ipnet = "2.11"
uuid = { version = "1.20", features = ["v4", "serde"] }
webrtc-audio-processing = { git = "https://github.com/zquestz/webrtc-audio-processing", features = ["bundled"] }
hex = "0.4"
percent-encoding = "2.3"
notify-rust = "4.11"
lewton = "0.10"
interprocess = { version = "2.2", features = ["tokio"] }
cpal = "0.17"
opus = "0.3"
global-hotkey = "0.7"
dtls = { version = "0.17", features = ["pem"] }
webrtc-util = "0.17"
async-trait = "0.1"
crossbeam-channel = "0.5.15"
rubato = "1.0"
audioadapter-buffers = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.21"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", default-features = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"

[dev-dependencies]
tempfile = "3.20"
serial_test = "3.2"

[build-dependencies]
iced_fontello = "0.13.2"

[target.'cfg(unix)'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[[bin]]
name = "nexus"
path = "src/main.rs"
