[package]
name = "nexus-common"
version = "0.5.15"
edition = "2024"
license = "MIT"
authors = ["Josh Ellithorpe <quest@mac.com>"]
description = "Common code for Nexus BBS"

[dependencies]
rand = "0.9"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
tokio = { version = "1.49", features = ["io-util", "macros", "rt", "sync", "time"] }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[dev-dependencies]
tempfile = "3.20"

[lib]
name = "nexus_common"
path = "src/lib.rs"
