[package]
name = "nexus-server"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Josh Ellithorpe <quest@mac.com>"]
description = "Cross-platform BBS server"

[dependencies]
nexus-common = { path = "../nexus-common" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["net", "rt-multi-thread", "macros", "io-util", "sync", "signal"] }
serde_json = "1.0"
socket2 = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4"
dirs = "6.0"
argon2 = { version = "0.5", features = ["std"] }
strum = { version = "0.27", features = ["derive"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
rcgen = "0.14"
sha2 = "0.10"
pem = "3.0"
igd-next = "0.16"
fluent = "0.17"
fluent-bundle = "0.16"
hex = "0.4"
unic-langid = "0.9"
infer = "0.19"
rand = "0.9"
iprange = "0.6"
ipnet = "2.11"
walkdir = "2.5"
grep-searcher = "0.1"
grep-regex = "0.1"
regex = "1.12"
csv = "1.3"

[target.'cfg(unix)'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[dev-dependencies]
tempfile = "3.20"

[lib]
name = "nexus_server"
path = "src/lib.rs"

[[bin]]
name = "nexusd"
path = "src/main.rs"
